--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database Configuration
-DATABASE_URL=postgresql://kairo:kairo123@localhost:5432/kairo_db
+DATABASE_URL=your_url
 
 # Redis Configuration
 REDIS_URL=redis://localhost:6379
