--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 DATABASE_URL=your_url
 
 # Redis Configuration
-REDIS_URL=redis://localhost:6379
+REDIS_URL=secret-key
 
 # Security
 SECRET_KEY=your-secret-key-change-in-production
